ShopCashiers.java added